data/derived/sp14/progs/unify/prog2474.ml.out
Characters 66-68:
  | [] -> [];;
          ^^
Error: This expression has type 'a list
       but an expression was expected of type int
